[project]
name = "booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.2",
    "black>=26.3.1",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "redis>=8.0.0",
    "fastapi-cache2>=0.2.2",
    "celery>=5.6.3",
    "pytest>=9.1.1",
    "pytest-dotenv>=0.5.2",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "ruff>=0.15.22",
]
